--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,13 +1,16 @@
 body {
     color: #777777; 
     font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+    margin: 0px; 
+    background-image: url("../Images/background.png");
 }
 
 .topgrid {
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-columns: 25% 20% 15% 15% 25%;
     color: #cccccc; 
     border-bottom: solid; 
+    background: #ffffff; 
 }
 
 h1 {
@@ -24,24 +27,25 @@ h1 {
     align-self: center;
     justify-content: space-evenly;
     word-spacing: 10px; 
-    text-decoration: none;
 }
+
 .navbar a {
     text-decoration: none;
 }
+
 .centerblock {
-    background-image: url("../Images/background.png");
-    position: absolute;
+    /* background-image: url("../Images/background.png"); */
+    position: relative;
     width: 100%;   
 }
 
 .whitebox {
     position: relative;
     background: white;
-    width: 60%;
-    margin: 5% 20%; 
+    margin: 5% 25%; 
     border: solid;
     border-color: #dddddd;
+    overflow: auto;
 }
 
 hr {
@@ -72,28 +76,47 @@ hr {
 
 .portfoliopics {
     position: relative; 
-    /* float: left;  */
 }
 
 .float {
     float:left; 
+    position: relative; 
+    margin: 20px 40px 20px 0px; 
 }
 
 .textonpic {
-    position: relative;
-    bottom: 80px; 
+    position: absolute;
+    bottom: 30px; 
     width: 200px;
     height: 50px; 
     background-color: #4aaaa5; 
     color: #ffffff; 
     text-align: center;
-    /* top: 40%;  */
+}
+
+#formtext{
+    color: #777777; 
+    height: 500px; 
+}
+
+.form {
+    width: 100%;
+}
+
+#formmesssage {
+    padding: 50px 0px; 
+}
+
+#button {
+    background-color: #4aaaa5;
+    color: #ffffff; 
+    padding: 5px 10px; 
+    margin-bottom: 10px; 
 }
 
 .teal {
     background-color: #4aaaa5;
     height: 5px; 
-    clear: both;
 }
 
 .grey {
@@ -101,7 +124,8 @@ hr {
     color: #ffffff;
     text-align: center;
     font-size: 70%;
-    padding: 10px 10px 0px 10px; 
+    /* height: 20px;  */
+    padding: 30px 10px 10px 10px; 
 }
 
 .clearfix:before,
@@ -111,7 +135,8 @@ hr {
 }
 
 .clearfix:after {
-   clear: both;
+    display: block;
+    clear: both;
 }
 
 /**
